--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 /bin/
 /build/
 /out/
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+/.idea/
