--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,13 @@ plugins {
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+    maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+    maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+    maven { url 'https://plugins.gradle.org/m2/' }
     mavenCentral()
+    jcenter()
+    google()
 }
 
 dependencies {
